--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,7 +65,7 @@
     "react-native-google-mobile-ads": "^16.0.3",
     "react-native-maps": "1.20.1",
     "react-native-permissions": "^5.4.2",
-    "react-native-reanimated": "~4.1.1",
+    "react-native-reanimated": "4.1.3",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
