--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -2,10 +2,10 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "jsx": "react-jsx",
+    "esModuleInterop": true,
+    "allowJs": true
   },
-  "exclude": [
-    "node_modules",
-    "**/node_modules/**"
-  ]
+  "exclude": ["node_modules", "**/node_modules/**"]
 }
